# uni-assignments

./: .gitignore  README.md
161/: 161.cpp  161.vcxproj  myfuncs.h  out.txt
161/x64/Debug/: 161.exe.recipe  161.vcxproj.FileListAbsolute.txt  vc143.idb
241/: 241.cpp  myfuncs.cpp  out.txt
241/x64/Debug/: 241.exe.recipe  241.ilk
241/x64/Release/: 241.iobj  241.ipdb  241.vcxproj.FileListAbsolute.txt
25_1/: 25_1.cpp  25_1.sln  25_1.vcxproj  25_1.vcxproj.filters  constants.h
262/: 262.cpp  262.sln  262.vcxproj  asfafaf.txt  constants.h  in2.txt  out.txt
262/x64/Debug/: 262.vcxproj.FileListAbsolute.txt  vc143.idb
2nd-semester/161/: 161.sln  161.vcxproj.filters  constants.h  myfuncs.cpp
2nd-semester/241/: 241.sln  241.vcxproj  241.vcxproj.filters  constants.h  in.txt  myfuncs.h
2nd-semester/25_1/: myfuncs.cpp  myfuncs.h
2nd-semester/262/: 262.cpp  262.vcxproj.filters  in.txt  myfuncs.cpp  myfuncs.h
2nd-semester/340/: 340.vcxproj  340.vcxproj.filters  constants.h  list.txt  myfuncs.cpp  structs.h
2nd-semester/411/: 411.sln  411.vcxproj.filters
340/: 340.cpp  340.sln  list.txt  myfuncs.h
340/x64/Debug/: 340.exe.recipe  340.ilk  340.vcxproj.FileListAbsolute.txt
3rd-semester/1st-lab/: .gitignore  CMakeLists.txt
3rd-semester/1st-lab/src/: aliases.h  main.cpp  util.cpp  util.h
3rd-semester/2nd-lab/: CMakeLists.txt
3rd-semester/2nd-lab/src/: aliases.h  main.cpp  util.cpp  util.h
3rd-semester/3rd-lab/src/: aliases.h  main.cpp  util.cpp  util.h
3rd-semester/4th-lab/src/: main.cpp
3rd-semester/5th-lab/src/: main.cpp  util.h
3rd-semester/6th-lab/src/: main.cpp  util.cpp  util.h
3rd-semester/discrete-maths/: CMakeLists.txt
3rd-semester/discrete-maths/src/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  AnswerDisplay.cpp  AnswerDisplay.h  Application.cpp  Application.h  Button.cpp  Button.h  Colors.h  Config.h  Constants.h  Context.h  Edge.cpp  Edge.h  EntityList.cpp  EntityList.h  FontHolder.cpp  FontHolder.h  FontIdentifiers.h  Matrix.cpp  Matrix.h  MatrixOperations.cpp  MatrixOperations.h  MouseInfo.cpp  MouseInfo.h  RoundedRectangle.cpp  RoundedRectangle.h  UserInput.cpp  UserInput.h  UserInputStructs.cpp  UserInputStructs.h  Vertex.cpp  Vertex.h  main.cpp
411/: 411.cpp  411.vcxproj  constants.h  myfuncs.cpp  myfuncs.h
4th-semester/computer-graphics/1st-lab/: CMakeLists.txt
4th-semester/mathematical-logic/1st-lab/: family.pl
4th-semester/mathematical-logic/2nd-lab/: maths.pl
4th-semester/mathematical-logic/3rd-lab/: menu.pl
5th-semester/databases/term-project/: package-lock.json  package.json
5th-semester/numerical-analysis/2nd-lab/: CMakeLists.txt
5th-semester/numerical-analysis/7th-lab/: CMakeLists.txt
5th-semester/operating-systems/10th-lab/: eigthScript  program  (+8 more)
6th-semester/software-architecture/: CMakeLists.txt  README.md
6th-semester/software-architecture/config/: config_template.ini
6th-semester/software-architecture/data/: create_database.sql  create_tables.sql  populate_database.sql
6th-semester/software-architecture/polyclinic-app/: main.cpp  polyclinic-app.pro  polyclinicapp.cpp  polyclinicapp.h  polyclinicapp.ui
6th-semester/software-architecture/src/: main.cpp
6th-semester/software-architecture/src/Controller/: ApplicationController.cpp  ApplicationController.h
6th-semester/software-architecture/src/Model/: ApplicationModel.cpp  ApplicationModel.h
6th-semester/software-architecture/src/View/: ApplicationView.cpp  ApplicationView.h  ApplicationViewUi.ui  ViewConstants.h
6th-semester/software-architecture/src/View/ButtonHandlers/: AdministratorButtonsHandler.h  RegistratorButtonsHandler.cpp  RegistratorButtonsHandler.h
6th-semester/software-architecture/src/View/StackedWidgetNavigator/: StackedWidgetNavigator.cpp
6th-semester/software-architecture/src/client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
6th-semester/software-architecture/src/client/Facade/: Facade.cpp  Facade.h
6th-semester/software-architecture/src/client/View/: ApplicationView.cpp  ApplicationView.h  ApplicationViewUi.ui  InputValidator.cpp  InputValidator.h  ValidatorSetup.cpp  ValidatorSetup.h  ViewConstants.h
6th-semester/software-architecture/src/client/View/ButtonHandlers/: AddSlotDialog.cpp  AddSlotDialog.h  AdministratorButtonsHandler.cpp  AdministratorButtonsHandler.h  DoctorButtonsHandler.cpp  DoctorButtonsHandler.h  RegistratorButtonsHandler.cpp  RegistratorButtonsHandler.h
6th-semester/software-architecture/src/client/View/StackedWidgetNavigator/: StackedWidgetNavigator.h
6th-semester/software-architecture/src/common/: UserType.h
6th-semester/software-architecture/src/common/data/: AdministratorData.h  AppointmentData.h  AppointmentFullData.h  DoctorData.h  DoctorScheduleData.h  DoctorSlotData.h  LoginInputData.h  MedicalRecordData.h  OutpatientCardData.h  PatientBriefData.h  PatientData.h  PatientRegistrationData.h  PatientSearchData.h  Reflect.h  RegistratorData.h
6th-semester/software-architecture/src/server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
6th-semester/software-architecture/src/server/ClientHandler/: ClientHandler.cpp  ClientHandler.h
6th-semester/software-architecture/src/server/DatabaseHandler/: DatabaseHandler.cpp  DatabaseHandler.h
7th-semester/systems-programming/1st-lab/: CMakeLists.txt
7th-semester/systems-programming/1st-lab/src/: ApplicationUi.ui  ApplicationWindow.cpp  ApplicationWindow.h  AssemblyOperation.h  Constants.h  FirstPassProcessor.cpp  FirstPassProcessor.h  OperationCode.h  SecondPassProcessor.cpp  SecondPassProcessor.h  TableManager.cpp  TableManager.h  Tools.cpp  Tools.h  main.cpp
(+633 files in other folders)
